--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.81.0",
+    "@tanstack/react-query": "^5.85.3",
     "axios": "^1.11.0",
     "react": "19.1.0",
     "react-native": "0.81.0",
